--- a/hotpdialog.ui
+++ b/hotpdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>391</width>
-    <height>133</height>
+    <height>143</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,9 +47,9 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>90</y>
-     <width>61</width>
-     <height>23</height>
+     <y>100</y>
+     <width>85</width>
+     <height>27</height>
     </rect>
    </property>
    <property name="text">
@@ -59,10 +59,10 @@
   <widget class="QPushButton" name="nextButton">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>90</y>
-     <width>91</width>
-     <height>23</height>
+     <x>60</x>
+     <y>100</y>
+     <width>131</width>
+     <height>27</height>
     </rect>
    </property>
    <property name="text">
@@ -115,6 +115,27 @@
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelNotify">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>70</y>
+     <width>191</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>9</pointsize>
+     <weight>75</weight>
+     <italic>true</italic>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>HOTP copied to clipboard</string>
    </property>
   </widget>
  </widget>
