--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -28,7 +28,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -702,8 +702,8 @@
      <widget class="QPushButton" name="writeGeneralConfigButton">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>230</y>
+        <x>30</x>
+        <y>320</y>
         <width>99</width>
         <height>27</height>
        </rect>
@@ -715,8 +715,8 @@
      <widget class="QPushButton" name="resetGeneralConfigButton">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>230</y>
+        <x>150</x>
+        <y>320</y>
         <width>99</width>
         <height>27</height>
        </rect>
@@ -728,8 +728,8 @@
      <widget class="QPushButton" name="generalCancelButton">
       <property name="geometry">
        <rect>
-        <x>260</x>
-        <y>230</y>
+        <x>270</x>
+        <y>320</y>
         <width>99</width>
         <height>27</height>
        </rect>
@@ -862,6 +862,77 @@
        </property>
        <property name="text">
         <string>Double press ScrollLock:</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="testsGroupBox">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>210</y>
+        <width>601</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Tests</string>
+      </property>
+      <widget class="QPushButton" name="testHOTPButton">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>60</y>
+         <width>99</width>
+         <height>27</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Test HOTP</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="testTOTPButton">
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>60</y>
+         <width>99</width>
+         <height>27</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Test TOTP</string>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="testsSpinBox">
+       <property name="geometry">
+        <rect>
+         <x>130</x>
+         <y>30</y>
+         <width>51</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>65536</number>
+       </property>
+       <property name="value">
+        <number>30</number>
+       </property>
+      </widget>
+      <widget class="QLabel" name="testsLabel">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>111</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Number of tests</string>
        </property>
       </widget>
      </widget>
