Improvements to OTP and About Window see #75 #62 #96 #108

--- a/aboutdialog.ui
+++ b/aboutdialog.ui
@@ -40,7 +40,8 @@
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Crypto Stick Utility&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Version:&lt;br/&gt;&lt;/p&gt;&lt;p&gt;This application allows you to configure and use the Crypto Stick.&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;https://crypto-stick.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;www.crypto-stick.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;https://crypto-stick.com/start&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;Instructions and help&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Crypto Stick Utility&lt;/span&gt;&lt;/p&gt;&lt;p&gt;Utility Version:&lt;br/&gt;Firmware Version:&lt;br/&gt;&lt;/p&gt;&lt;p&gt;This application allows you to configure and use the Crypto Stick.&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;https://crypto-stick.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;www.crypto-stick.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;https://crypto-stick.com/start&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;Instructions and help&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
+</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -59,9 +60,9 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>230</y>
+     <y>240</y>
      <width>331</width>
-     <height>131</height>
+     <height>151</height>
     </rect>
    </property>
    <property name="font">
@@ -109,7 +110,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>200</y>
+     <y>220</y>
      <width>111</width>
      <height>20</height>
     </rect>
@@ -153,8 +154,28 @@
   <widget class="QLabel" name="VersionLabel">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>44</y>
+     <x>160</x>
+     <y>40</y>
+     <width>111</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>9</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:11pt; font-weight:400;&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="firmwareLabel">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>60</y>
      <width>111</width>
      <height>20</height>
     </rect>
