--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -28,7 +28,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -199,7 +199,7 @@
        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;test&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="text">
-       <string>Close</string>
+       <string>Cancel</string>
       </property>
      </widget>
      <widget class="QPushButton" name="writeButton">
@@ -676,8 +676,8 @@
      <widget class="QPushButton" name="writeGeneralConfigButton">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>320</y>
+        <x>130</x>
+        <y>460</y>
         <width>99</width>
         <height>27</height>
        </rect>
@@ -686,37 +686,24 @@
        <string>Save</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="resetGeneralConfigButton">
-      <property name="geometry">
-       <rect>
-        <x>150</x>
-        <y>320</y>
-        <width>99</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Reset</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="generalCancelButton">
       <property name="geometry">
        <rect>
-        <x>270</x>
-        <y>320</y>
+        <x>350</x>
+        <y>460</y>
         <width>99</width>
         <height>27</height>
        </rect>
       </property>
       <property name="text">
-       <string>Close</string>
+       <string>Cancel</string>
       </property>
      </widget>
      <widget class="QGroupBox" name="USBKeyboardGroupBox">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>90</y>
+        <y>170</y>
         <width>571</width>
         <height>131</height>
        </rect>
@@ -843,7 +830,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>210</y>
+        <y>290</y>
         <width>601</width>
         <height>91</height>
        </rect>
@@ -967,6 +954,45 @@
       <property name="text">
        <string/>
       </property>
+     </widget>
+     <widget class="QGroupBox" name="OTPPasswordGroupBox">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>571</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>OTP Password settings</string>
+      </property>
+      <widget class="QCheckBox" name="enableUserPasswordCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>30</y>
+         <width>231</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Enable OTP password</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="deleteUserPasswordCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>60</y>
+         <width>381</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Forget OTP password after 10 minutes</string>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
